--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-.navbar{
+
+ .navbar{
   height: 50px;
   width: 100%;
   background: #F5DB3C;
-  font-family:'Faustina';
+ 
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -17,9 +13,9 @@
   justify-content: center;
   align-items: center;
 
-}
+} 
 
-.navbar ul{
+ .navbar ul{
   list-style: none;
   display: flex;
   justify-content: center;
@@ -30,12 +26,14 @@
 }
 .navbar li{
    margin-right: 33px;
-   padding: 0px 4px;
+   padding: 0px 1px;
+   
 }
 
 .navbar li a{
   color: black;
   text-decoration: none;
+  font-weight: 600;
   
 }
 
@@ -47,14 +45,21 @@
 .home-icon{
   font-size: 25px;
   color: red;
+} 
+.search_btn{
+  font-size: 18px;
 }
-
+.search_btn:hover{
+   color:red;
+   
+}
 
 /* top-headding */
 
 .top-heading{
-   height: 480px;
+   height: 470px;
    width: 730px;
+  
    box-shadow: 3px -1px 10px -1px rgba(89, 84, 84, 0.3);
    
    /* border: 1px solid red; */
@@ -92,3 +97,19 @@
   font-weight: 400;
   font-size: 14px;
 }
+
+/* Pov */
+
+.pov-card{
+  box-shadow:3px -1px 10px -1px rgba(89, 84, 84, 0.3);
+  width: 280px;
+  height: 310px;
+}
+
+
+
+
+
+
+
+
