--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
  .navbar{
   height: 50px;
   width: 100%;
@@ -105,11 +108,4 @@
   width: 280px;
   height: 310px;
 }
-
-
-
-
-
-
-
 
