--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
- .navbar{
+
+.navbar{
   height: 50px;
   width: 100%;
   background: #F5DB3C;
- 
+  font-family:'Faustina';
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -16,9 +17,9 @@
   justify-content: center;
   align-items: center;
 
-} 
+}
 
- .navbar ul{
+.nav-ul{
   list-style: none;
   display: flex;
   justify-content: center;
@@ -27,28 +28,67 @@
   
   
 }
-.navbar li{
+.nav-item{
    margin-right: 33px;
-   padding: 0px 1px;
-   
 }
 
-.navbar li a{
+.nav-item a{
   color: black;
   text-decoration: none;
-  font-weight: 600;
   
 }
 
-.navbar li a:hover{
+.nav-ul  a:hover{
   color: red;
   
 }
 
 .home-icon{
   font-size: 25px;
+  color: black;
+}
+.nav-dropdown{
+  position: relative;
+  display: inline-block;
+}
+.dropdown-ul{
+  padding: 0;
+  width: 168px;
+  height: 362px;
+  display: none;
+  position: absolute;
+  left: -30px;
+  top: 28px;
+  list-style: none;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  border-radius: 14px;
+  font-family: "Faustina";
+  font-size: 14px;
+  font-weight: 400;
+
+}
+
+.dropdown-items {
+  margin: 10px;
+  display: block;
+  
+}
+
+.nav-dropdown:hover .dropdown-ul{
+  display: block;
+}
+
+.dropdown-items a{
+  color: white;
+}
+
+.home-icon{
+  font-size: 25px;
   color: red;
-} 
+}
+
 .search_btn{
   font-size: 18px;
 }
